--- a/homework-part1/src/app/toolbar/toolbar.component.html
+++ b/homework-part1/src/app/toolbar/toolbar.component.html
@@ -7,7 +7,7 @@
 
   <mat-form-field appearance="fill">
     <mat-label>Select</mat-label>
-    <mat-select>
+    <mat-select placeholder="Sort">
       <mat-option value="one">First option</mat-option>
       <mat-option value="two">Second option</mat-option>
     </mat-select>
