fix: add module for input

--- a/homework-part1/src/app/toolbar/toolbar.component.html
+++ b/homework-part1/src/app/toolbar/toolbar.component.html
@@ -14,7 +14,7 @@
   </mat-form-field>
 
   <mat-form-field appearance="fill">
-    <mat-label>Input</mat-label>
+    <mat-label>Search Users</mat-label>
     <input matInput />
   </mat-form-field>
 </mat-toolbar>
