--- a/homework-part1/src/app/users/users.component.html
+++ b/homework-part1/src/app/users/users.component.html
@@ -3,5 +3,5 @@
 </mat-toolbar> -->
 <h2>USERS COMPONENT</h2>
 
-<app-toolbar></app-toolbar>
-<app-users-list></app-users-list>
+<app-toolbar (selectAll)="usersList.selectAll()"></app-toolbar>
+<app-users-list #usersList [users]="users"></app-users-list>
