--- a/homework-part1/src/app/users/users-list/users-list.component.html
+++ b/homework-part1/src/app/users/users-list/users-list.component.html
@@ -8,7 +8,10 @@
       <p>{{ user.phone }}</p>
     </mat-card-content>
     <mat-card-actions>
-      <mat-checkbox [(ngModel)]="user.selected"></mat-checkbox>
+      <mat-checkbox
+        [(ngModel)]="user.selected"
+        (change)="onUserSelected(user)"
+      ></mat-checkbox>
     </mat-card-actions>
   </mat-card>
 </div>
