--- a/homework-part1/src/app/users/users.component.html
+++ b/homework-part1/src/app/users/users.component.html
@@ -5,6 +5,7 @@
 
 <app-toolbar
   (selectAll)="selectAll()"
+  (deleteSelected)="deleteSelected()"
   [isAnyChecked]="isAnyChecked"
 ></app-toolbar>
 <app-users-list
