--- a/homework-part2/src/app/users/users-list/users-list.component.html
+++ b/homework-part2/src/app/users/users-list/users-list.component.html
@@ -19,10 +19,10 @@
         <p>{{ user.phone }}</p>
       </mat-card-content>
       <mat-card-actions>
-        <!-- <mat-checkbox
+        <mat-checkbox
           [(ngModel)]="user.selected"
           (change)="onUserSelected(user)"
-        ></mat-checkbox> -->
+        ></mat-checkbox>
       </mat-card-actions>
     </mat-card>
   </div>
