--- a/homework-part2/src/app/users/users-list/users-list.component.html
+++ b/homework-part2/src/app/users/users-list/users-list.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let user of users">
+<div *ngFor="let user of users" class="container">
   <div
     class="card-container"
     *ngIf="
@@ -8,16 +8,18 @@
     "
   >
     <mat-card class="user-card">
+		<div>
       <mat-card-header>
         <mat-card-title
           >{{ user.name }}</mat-card-title
         >
       </mat-card-header>
       <mat-card-content>
-				<p>{{ user.username }}</p>
+				<p><span>Username: </span>{{ user.username }}</p>
         <p>{{ user.email }}</p>
         <p>{{ user.phone }}</p>
       </mat-card-content>
+		</div>
       <mat-card-actions>
         <mat-checkbox
           [(ngModel)]="user.selected"
