geat: add a form to add a new user and render it into list

--- a/homework-part2/src/app/users/users.component.css
+++ b/homework-part2/src/app/users/users.component.css
@@ -1,6 +1,8 @@
 app-users-list {
   display: flex;
+	flex-direction: column-reverse;
+	justify-content: center; 
+	align-items: center;
   flex-wrap: wrap;
   gap: 10px;
-	justify-content: center;
 }
