--- a/homework-part2/src/app/users/users-list/users-list.component.html
+++ b/homework-part2/src/app/users/users-list/users-list.component.html
@@ -3,21 +3,21 @@
     class="card-container"
     *ngIf="
       searchValue === '' ||
-      user.name.toLowerCase().includes(searchValue) ||
-      user.username.toLowerCase().includes(searchValue)
+      user.name?.toLowerCase().includes(searchValue) ||
+      user.username?.toLowerCase().includes(searchValue)
     "
   >
     <mat-card class="user-card">
 		<div>
       <mat-card-header>
         <mat-card-title
-          >{{ user.name }}</mat-card-title
+          >{{ user?.name }}</mat-card-title
         >
       </mat-card-header>
       <mat-card-content>
-				<p><span>Username: </span>{{ user.username }}</p>
-        <p>{{ user.email }}</p>
-        <p>{{ user.phone }}</p>
+				<p><span>Username: </span>{{ user?.username }}</p>
+        <p>{{ user?.email }}</p>
+        <p>{{ user?.phone }}</p>
       </mat-card-content>
 		</div>
       <mat-card-actions>
